<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Safe"
    android:background="@drawable/gradient_green">

    <TextView
        android:id="@+id/safe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/safe_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#000000"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="147dp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/safe_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/you_are_safe_message"
                android:textSize="22sp">

            </TextView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="#15257E"
                android:onClick="launchProtocolsActivity"
                android:text="@string/stay_safe"
                android:textColor="#FFFFFF">

            </Button>

        </LinearLayout>
    </ScrollView>

</android.widget.RelativeLayout>